typescript/checker/tests/conformance/classes/classExpressions/classExpression4.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            79,
        ),
        hi: BytePos(
            80,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classExpressions/classExpression4.ts:6:14
  |
6 | let x = (new C).foo();
  |              ^

